--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@ Current Teaching: <A HREF="1951F22.html">Math 1951: Calculus I</A>, <A HREF="206
 <td>Instructor</td>
 <td><a href="http://server.math.umanitoba.ca/~qif/1500W22.html">Introduction to Calculus I</a></td>
 <td>1500</td>
-<td><A HREF="https://github.com/FeiQiMath/feiqimath.github.io/blob/7d6a4875e85b2da9603526d8019f3f32500e0f58/Winter_2022_Instructor_UManitoba_Calculus1.pdf">A03</A></td>
+<td><A HREF="https://github.com/FeiQiMath/feiqimath.github.io/blob/7d6a4875e85b2da9603526d8019f3f32500e0f58/Winter_2022_Instructor_UManitoba_Calculus1.pdf">A03</A>
+  <A HREF="Winter_2022_Instructor_UManitoba_Calculus1.pdf"></td>
 <td>&nbsp;</td>
 </tr>  
 
