--- a/index.html
+++ b/index.html
@@ -69,10 +69,9 @@ Current Teaching: <A HREF="1951F22.html">Math 1951: Calculus I</A>, <A HREF="206
 <td>Manitoba</td>
 <td>Winter 2022</td>
 <td>Instructor</td>
-<td><a href="http://server.math.umanitoba.ca/~qif/1500W22.html">Introduction to Calculus I</a></td>
+<td><a href="1500W22.html">Introduction to Calculus I</a></td>
 <td>1500</td>
-<td><A HREF="https://github.com/FeiQiMath/feiqimath.github.io/blob/7d6a4875e85b2da9603526d8019f3f32500e0f58/Winter_2022_Instructor_UManitoba_Calculus1.pdf">A03</A>
-  <A HREF="Winter_2022_Instructor_UManitoba_Calculus1.pdf">A03</A></td>
+<td> <A HREF="./SIRS/Winter_2022_Instructor_UManitoba_Calculus1.pdf">A03</A></td>
 <td>&nbsp;</td>
 </tr>  
 
@@ -81,9 +80,9 @@ Current Teaching: <A HREF="1951F22.html">Math 1951: Calculus I</A>, <A HREF="206
 <td>Manitoba</td>
 <td>Fall 2021</td>
 <td>Instructor</td>
-<td><a href="http://server.math.umanitoba.ca/~qif/1500F21.html">Introduction to Calculus I</a></td>
+<td><a href="1500F21.html">Introduction to Calculus I</a></td>
 <td>1500</td>
-<td><A HREF="https://server.math.umanitoba.ca/~qif/SIRS/1500F21.pdf">A05</A></td>
+<td><A HREF="/SIRS/1500F21.pdf">A05</A></td>
 <td>&nbsp;</td>
 </tr>  
 
