--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
 
 <font color="red"><font size=7><B>Fei Qi (齐飞)</B></font></font>
 <HR>
-
-Current Affiliation: Visiting Assistant Professor, University of Denver. 
-
+<P STYLE="margin-bottom: 0in">Current Affiliation: Visiting Assistant Professor, University of Denver. </P>
 <HR>
-<P STYLE="margin-bottom: 0in">Email: firstname dot lastname at umanitoba dot ca</P>
+<P STYLE="margin-bottom: 0in">Email: firstname dot lastname at du dot edu</P>
 <HR>
 <P STYLE="margin-bottom: 0in"> 
 Research Interest: Vertex algebraic structures in Mathematics and Physics, Mathematical Constructions of Quantum Field Theory</P>
@@ -45,7 +43,7 @@ Here are some works I have done in the past but need further organization to bec
 
 <hr />
 
-Current Teaching: <A HREF="1951F22.html">Math 1951: Calculus I</A>, <A HREF="2060F22.html">Math 2060: Elementary Linear Algebra</A>. 
+Current Teaching: Nothing in Spring 2023. 
 
 
 <hr />
@@ -67,6 +65,48 @@ Current Teaching: <A HREF="1951F22.html">Math 1951: Calculus I</A>, <A HREF="206
 </tr>
 
 
+<tr>
+<td>Denver</td>
+<td>Winter 2023</td>
+<td>Instructor</td>
+<td><a href="https://denveru-my.sharepoint.com/:f:/g/personal/fei_qi_du_edu/Es16CuGbBTRGm8ryFxc2wZsB3DT65HqHHcdba8tGChX3sg?e=qyvQDy">Introduction to Differential Equations</a></td>
+<td>2070</td>
+<td> <A HREF="./SIRS/Winter_2023_Denver_DiffEq_Section_1.pdf">1</A>, <A HREF="./SIRS/Winter_2023_Denver_DiffEq_Section_7.pdf">7</A></td>
+<td>&nbsp;</td>
+</tr>  
+
+
+<tr>
+<td>Denver</td>
+<td>Winter 2023</td>
+<td>Instructor</td>
+<td><a href="https://denveru-my.sharepoint.com/:f:/g/personal/fei_qi_du_edu/EqEfyZP_oAlOjAog5Zjf9D8B3BW34c21jmjhy8VUjZKong?e=cJ9HqI">Calculus I</a></td>
+<td>1951</td>
+<td> <A HREF="./SIRS/Winter_2023_Denver_Calculus_1_Section_3.pdf">3</A></td>
+<td>&nbsp;</td>
+</tr>  
+
+
+<tr>
+<td>Denver</td>
+<td>Autumn 2022</td>
+<td>Instructor</td>
+<td><a href="https://denveru-my.sharepoint.com/:f:/g/personal/fei_qi_du_edu/EnGlnWlydoJDrbQnOUE2eyABH5RE0E4dtIcs3-hACgfzJg?e=yHrS6w">Elements of Linear Algebra</a></td>
+<td>2060</td>
+<td> <A HREF="./SIRS/Autumn-2022-Denver-Linear-Algebra-Section-4.pdf">4</A></td>
+<td>&nbsp;</td>
+</tr>  
+
+
+<tr>
+<td>Denver</td>
+<td>Autumn 2022</td>
+<td>Instructor</td>
+<td><a href="https://denveru-my.sharepoint.com/:f:/g/personal/fei_qi_du_edu/EqEfyZP_oAlOjAog5Zjf9D8B3BW34c21jmjhy8VUjZKong?e=cJ9HqI">Calculus I</a></td>
+<td>1951</td>
+<td> <A HREF="./SIRS/Autumn-2022-Denver-Calculus-1-Section-5.pdf">5</A></td>
+<td>&nbsp;</td>
+</tr>  
 
 
 <tr>
