--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Current Teaching: Nothing in Spring 2023.
 <td>Denver</td>
 <td>Winter 2023</td>
 <td>Instructor</td>
-<td><a href="https://denveru-my.sharepoint.com/:f:/g/personal/fei_qi_du_edu/EqEfyZP_oAlOjAog5Zjf9D8B3BW34c21jmjhy8VUjZKong?e=cJ9HqI">Calculus I</a></td>
+<td><a href="1951W23.html">Calculus I</a></td>
 <td>1951</td>
 <td> <A HREF="./SIRS/Winter_2023_Denver_Calculus_1_Section_3.pdf">3</A></td>
 <td>&nbsp;</td>
