--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Fei Qi - Math - University of Denver</title>
   </head>
 
-<font color="red"><font size=7><B>Fei Qi (齐飞)</B></font></font>
+<font color="red"><font size="7"><B>Fei Qi (齐飞)</B></font></font>
 <HR>
 <P STYLE="margin-bottom: 0in">Current Affiliation: Visiting Assistant Professor, University of Denver. </P>
 <HR>
@@ -341,7 +341,7 @@ Current Teaching: Nothing in Spring 2023.
 <hr />
 In case you are used to my old webpage, here is the <A HREF="index(210825).html">link</A>. But preferably you can alert me when you find any of the above links fail. 
 <hr />
-<p>Fei Qi<br />Room 451, Machray Hall<br />Department of Mathematics<br />University of Manitoba<br />186 Dysart Road<br />Winnipeg, MB R3T2N2, Canada</p>
+<p>Fei Qi<br />Room 216, CM Knudson Hall<br />Department of Mathematics<br />University of Denver<br />2390 South York Street<br />Denver, CO 80210, USA</p>
 <hr />
 
 </html>
