--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Research Interest: Vertex algebraic structures in Mathematics and Physics, Mathe
 
 <P>Work in progress</P>
 <UL> 
-<LI> (with Francesco Fiodalisi) Fermionic constructions of meromorphic open-string vertex algebras. </LI>
+<LI> (with Vladimir Kovalchuk) On the deformations of stongly finitely generated vertex algebras. </LI>
 <LI> (with Ling Chen) Intertwining operator algebras associated to affine Lie algebras. </LI>
 <LI> (with Yi-Zhi Huang) Second cohomology and the deformations of meromorphic open-string vertex algebras</LI>
 </UL>
@@ -24,6 +24,40 @@ Research Interest: Vertex algebraic structures in Mathematics and Physics, Mathe
 
 <P>Publications:</P>
 <ul>
+<LI> Fei Qi, <A HREF="https://arxiv.org/abs/2309.05673">Fermionic construction of the <math>
+ <mrow>
+  <mfrac>
+   <mi>&#x2124;</mi>
+   <mn>2</mn>
+  </mfrac>
+  </mrow>
+</math>
+-graded meromorphic open-string vertex algebra and its <math>
+ <mrow>
+  <msub>
+   <mi>&#x2124;</mi>
+   <mn>2</mn>
+  </msub>
+  </mrow>
+</math>
+-twisted module, II</A>, arXiv:2309.05673</LI>
+<LI> Francesco Fiordalisi, Fei Qi, <A HREF="https://arxiv.org/abs/2309.04620">Fermionic construction of the <math>
+ <mrow>
+  <mfrac>
+   <mi>&#x2124;</mi>
+   <mn>2</mn>
+  </mfrac>
+  </mrow>
+</math>
+-graded meromorphic open-string vertex algebra and its <math>
+ <mrow>
+  <msub>
+   <mi>&#x2124;</mi>
+   <mn>2</mn>
+  </msub>
+  </mrow>
+</math>
+-twisted module, I</A>, arXiv:2309.04620</LI>
 <li> Fei Qi, <a href="https://arxiv.org/abs/2207.03702">On the extensions of the left modules for a meromorphic open-string vertex algebra I</a>, arXiv:2207.03702, submitted</li>
 <li> Fei Qi, <a href="https://arxiv.org/abs/2108.06566">First cohomologies of affine, Virasoro and lattice vertex operator algebras</a>, Letters in Mathematical Physics, 112 (2022). </li>
 <li> Fei Qi, <a href="https://arxiv.org/abs/2006.16704">Covariant derivatives of eigenfunctions along parallel tensors over space forms</a>, to appear on Journal of Noncommutative Geometry. </li>
@@ -43,7 +77,7 @@ Here are some works I have done in the past but need further organization to bec
 
 <hr />
 
-Current Teaching: Nothing in Spring 2023. 
+Current Teaching: <A HREF="https://canvas.du.edu/courses/161632">Math 1951: Calculus I</A>, <A HREF="https://canvas.du.edu/courses/161081">Math 1953: Calculus III</A>
 
 
 <hr />
