--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <HR>
 <P STYLE="margin-bottom: 0in">Current Affiliation: Visiting Assistant Professor, University of Denver. </P>
 <HR>
-<P STYLE="margin-bottom: 0in">Email: firstname dot lastname at du dot edu</P>
+<P STYLE="margin-bottom: 0in">Email: firstname dot lastname at du dot edu, firstname dot lastname dot math dot phys at gmail</P>
 <HR>
 <P STYLE="margin-bottom: 0in"> 
 Research Interest: Vertex algebraic structures in Mathematics and Physics, Mathematical Constructions of Quantum Field Theory</P>
