--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Research Interest: Vertex algebraic structures in Mathematics and Physics, Mathe
 
 <P>Work in progress</P>
 <UL> 
-<LI> (with Vladimir Kovalchuk) On the deformations of stongly finitely generated vertex algebras. </LI>
+<LI> (with Vladimir Kovalchuk) On the deformations of strongly finitely generated vertex algebras. </LI>
 <LI> (with Ling Chen) Intertwining operator algebras associated to affine Lie algebras. </LI>
 <LI> (with Yi-Zhi Huang) Second cohomology and the deformations of meromorphic open-string vertex algebras</LI>
 </UL>
