--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@ Research Interest: Vertex algebraic structures in Mathematics and Physics, Mathe
 -twisted module, I</A>, arXiv:2309.04620</LI>
 <li> Fei Qi, <a href="https://arxiv.org/abs/2207.03702">On the extensions of the left modules for a meromorphic open-string vertex algebra I</a>, arXiv:2207.03702, to appear in Communications in Mathematical Physics.</li>
 <li> Fei Qi, <a href="https://arxiv.org/abs/2108.06566">First cohomologies of affine, Virasoro and lattice vertex operator algebras</a>, Letters in Mathematical Physics, 112 (2022). </li>
-<li> Fei Qi, <a href="https://arxiv.org/abs/2006.16704">Covariant derivatives of eigenfunctions along parallel tensors over space forms</a>, to appear on Journal of Noncommutative Geometry. </li>
+<li> Fei Qi, <a href="https://arxiv.org/abs/2006.16704">Covariant derivatives of eigenfunctions along parallel tensors over space forms</a>, Journal of Noncommutative Geometry, 16 (2022), no. 2, 717--759. </li>
 <li> Fei Qi, <a href="https://arxiv.org/abs/2001.02318">Meromorphic open-string vertex algebras and modules over two-dimensional orientable space forms</a>, Letters in Mathematical Physics, 111 (2021), </li>
 <li> Yi-Zhi Huang, Fei Qi, <a href="https://arxiv.org/abs/1804.07423">The first cohomology, derivations and the reductivity of a (meromorphic open-string) vertex algebra</a>, Transactions of American Mathematical Society, 373 (2020). </li>
 <li> Fei Qi, <A HREF="https://arxiv.org/abs/1804.07424">On the cohomology of meromorphic open-string vertex algebras</A>, New York Journal of Mathematics Volume 25 (2019)</li>
 <li> Fei Qi, <a href="https://arxiv.org/abs/1801.08638">On modules for meromorphic open-string vertex algebras</a>, Journal of Mathematical Physics 60, 031701 (2019)</li>
+<li> Fei Qi, <A HREF="https://www.proquest.com/docview/2159009905">Representation theory and cohomology theory of meromorphic open-string vertex algebras</A>, PhD Dissertation, Rutgers University, May 2018. 
 <li>Bud Coulson, Shashank Kanade, James Lepowsky, Robert McRae, Fei Qi, Matthew C. Russell, Christopher Sadowski, <a href="https://arxiv.org/abs/1411.2044.pdf">A motivated proof of the G&ouml;llnitz-Gordon-Andrews identities</a>, Ramanujan Journal, September 2015.</li>
 </ul>
 
