--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <P STYLE="margin-bottom: 0in"> 
 Research Interest: Vertex algebraic structures in Mathematics and Physics, Mathematical Constructions of Quantum Field Theory</P>
 <HR>
+<P>I strongly support the Library Genesis project and the Sci-Hub project. I do not publish with Elsevier. </P>
+<HR>
 
 <P>Work in progress</P>
 <UL> 
