--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Research Interest: Vertex algebraic structures in Mathematics and Physics, Mathe
   </msub>
   </mrow>
 </math>
--twisted module, II</A>, arXiv:2309.05673</LI>
+-twisted module, II</A>, arXiv:2309.05673, to appear in Letters in Mathematical Physics. </LI>
 <LI> Francesco Fiordalisi, Fei Qi, <A HREF="https://arxiv.org/abs/2309.04620">Fermionic construction of the <math>
  <mrow>
   <mfrac>
@@ -59,7 +59,7 @@ Research Interest: Vertex algebraic structures in Mathematics and Physics, Mathe
   </msub>
   </mrow>
 </math>
--twisted module, I</A>, arXiv:2309.04620</LI>
+-twisted module, I</A>, arXiv:2309.04620, to appear in Letters in Mathematical Physics. </LI>
 <li> Fei Qi, <a href="https://arxiv.org/abs/2207.03702">On the extensions of the left modules for a meromorphic open-string vertex algebra I</a>, arXiv:2207.03702, to appear in Communications in Mathematical Physics.</li>
 <li> Fei Qi, <a href="https://arxiv.org/abs/2108.06566">First cohomologies of affine, Virasoro and lattice vertex operator algebras</a>, Letters in Mathematical Physics, 112 (2022). </li>
 <li> Fei Qi, <a href="https://arxiv.org/abs/2006.16704">Covariant derivatives of eigenfunctions along parallel tensors over space forms</a>, Journal of Noncommutative Geometry, 16 (2022), no. 2, 717--759. </li>
