--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@ Here are some works I have done in the past but need further organization to bec
 
 <hr />
 
-Current Teaching: Math 1951: Calculus I, <A HREF="https://canvas.du.edu/courses/170331">Section 2</A>, Math 2070: Introduction to Differential Equations <A HREF="https://canvas.du.edu/courses/170203">Section 1</A>, <A HREF="https://canvas.du.edu/courses/171712">Section 4</A>
-
+Current Teaching: No teaching assignments for Spring 2024. 
 
 <hr />
 
@@ -100,6 +99,28 @@ Current Teaching: Math 1951: Calculus I, <A HREF="https://canvas.du.edu/courses/
 </td>
 <td>Comments</td>
 </tr>
+
+
+<tr>
+<td>Denver</td>
+<td>Winter 2024</td>
+<td>Instructor</td>
+<td><a href="./Math2070/">Introduction to Differential Equations</a></td>
+<td>2070</td>
+<td> <A HREF="./SIRS/Winter_2024_Denver_DiffEq_Section_1.pdf">1</A>, <A HREF="./SIRS/Winter_2024_Denver_DiffEq_Section_4.pdf">4</A></td>
+<td>Most up-to-date slides</td>
+</tr>  
+
+
+<tr>
+<td>Denver</td>
+<td>Winter 2024</td>
+<td>Instructor</td>
+<td><a href="https://canvas.du.edu/courses/170331">Calculus I</a></td>
+<td>1951</td>
+<td> <A HREF="./SIRS/Winter_2024_Denver_Calculus1_Section_2.pdf">2</A></td>
+<td>&nbsp;</td>
+</tr>  
 
 <tr>
 <td>Denver</td>
