--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ Current Teaching: No teaching assignments for Spring 2024.
 <td>Denver</td>
 <td>Winter 2024</td>
 <td>Instructor</td>
-<td><a href="./Math2070/">Introduction to Differential Equations</a></td>
+<td><a href="https://github.com/FeiQiMath/feiqimath.github.io/tree/80974ac8255c5d1a64fd9cfef413f4b9bdca6981/Math2070">Introduction to Differential Equations</a></td>
 <td>2070</td>
 <td> <A HREF="./SIRS/Winter_2024_Denver_DiffEq_Section_1.pdf">1</A>, <A HREF="./SIRS/Winter_2024_Denver_DiffEq_Section_4.pdf">4</A></td>
 <td>Most up-to-date slides</td>
