--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ Research Interest: Vertex algebraic structures in Mathematics and Physics, Mathe
   </msub>
   </mrow>
 </math>
--twisted module, II</A>, arXiv:2309.05673, to appear in Letters in Mathematical Physics. </LI>
+-twisted module, II</A>, arXiv:2309.05673, Letters in Mathematical Physics, 114 (2024), Article 67, 1--50. </LI>
 <LI> Francesco Fiordalisi, Fei Qi, <A HREF="https://arxiv.org/abs/2309.04620">Fermionic construction of the <math>
  <mrow>
   <mfrac>
@@ -59,7 +59,7 @@ Research Interest: Vertex algebraic structures in Mathematics and Physics, Mathe
   </msub>
   </mrow>
 </math>
--twisted module, I</A>, arXiv:2309.04620, to appear in Letters in Mathematical Physics. </LI>
+-twisted module, I</A>, arXiv:2309.04620, Letters in Mathematical Physics, 114 (2024), Article 59, 1--42</LI>
 <li> Fei Qi, <a href="https://arxiv.org/abs/2207.03702">On the extensions of the left modules for a meromorphic open-string vertex algebra I</a>, Communications in Mathematical Physics, 405 (2024), Article 65, 1--51.</li>
 <li> Fei Qi, <a href="https://arxiv.org/abs/2108.06566">First cohomologies of affine, Virasoro and lattice vertex operator algebras</a>, Letters in Mathematical Physics, 112 (2022), Article 56, 1--52. </li>
 <li> Fei Qi, <a href="https://arxiv.org/abs/2006.16704">Covariant derivatives of eigenfunctions along parallel tensors over space forms</a>, Journal of Noncommutative Geometry, 16 (2022), no. 2, 717--759. </li>
