--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ Research Interest: Vertex algebraic structures in Mathematics and Physics, Mathe
 
 <P>Work in progress</P>
 <UL> 
-<LI> (with Vladimir Kovalchuk) On the deformations of strongly finitely generated vertex algebras. </LI>
+<LI> Cup products and Gerstenhaber brackets for a meromorphic open-string vertex algebra. </LI>
 <LI> (with Ling Chen) Intertwining operator algebras associated to affine Lie algebras. </LI>
 <LI> (with Yi-Zhi Huang) Second cohomology and the deformations of meromorphic open-string vertex algebras</LI>
 </UL>
@@ -26,6 +26,8 @@ Research Interest: Vertex algebraic structures in Mathematics and Physics, Mathe
 
 <P>Publications:</P>
 <ul>
+  <LI> Vladimir Kovalchuk, Fei Qi, <A HREF="https://arxiv.org/abs/2408.16309">First-order deformations of freely generated vertex algebras</A>, arXif:2408.16309. </LI>
+
 <LI> Fei Qi, <A HREF="https://arxiv.org/abs/2309.05673">Fermionic construction of the <math>
  <mrow>
   <mfrac>
